@startuml
title Face Attendance System - Diagramme de classes (Base de données)

skinparam classAttributeIconSize 0
skinparam shadowing false

' =======================
' ======== TABLES =======
' =======================

class Employe {
  +id : int
  +matricule : varchar(50)
  +first_name : varchar(100)
  +last_name : varchar(100)
  +email : varchar(255)
  +phone : varchar(30)
  +poste : varchar(100)
  +departement : varchar(100)
  +date_embauche : date
  +is_active : tinyint
  +has_face_profile : tinyint
  +face_samples_count : int
  +last_face_training_at : datetime
  +created_at : datetime
  +updated_at : datetime
}

class FaceTemplate {
  +id : int
  +employee_id : int
  +image_path : varchar(500)
  +encoding_path : varchar(500)
  +type : varchar(50)
  +is_active : tinyint
  +created_at : datetime
}

class Presence {
  +id : int
  +employee_id : int
  +jour : date
  +check_in_time : time
  +check_out_time : time
  +status : varchar(30)
  +source : varchar(30)
  +face_confidence : float
  +device_name : varchar(100)
  +created_at : datetime
}

class Admin {
  +id : int
  +nom : varchar(255)
  +email : varchar(255)
  +password_hash : varchar(255)
  +is_active : tinyint
  +last_login : datetime
  +created_at : datetime
  +updated_at : datetime
}

class Rapport {
  +id : int
  +start_date : date
  +end_date : date
  +file_path : varchar(500)
  +stats_json : json
  +generated_by_admin_id : int
  +generated_at : datetime
  +commentaire : text
}

' =========================
' ===== RELATIONSHIPS =====
' =========================

Employe "1" -- "0..*" FaceTemplate : possède
Employe "1" -- "0..*" Presence : enregistre

Admin "1" -- "0..*" Rapport : génère
Rapport "1" -- "0..*" Presence : contient

@enduml
